@@ -2,6 +2,7 @@
 Version: 1.4.2
 Date: ????
   Changes:
+    - Add rocket progress signals
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: 2025-02-22
